--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = { version = "1" }
+polars = { version = "0.40", features = ["lazy"] }
 reqwest = { version = "0.12" }
 tokio = { version = "1", features = ["full"] }
